language/move-lang/tests/move_check/parser/use_with_main.exp
error[E03002]: unbound module
  ┌─ tests/move_check/parser/use_with_main.move:3:5
  │
3 │ use 0x0::Module;
  │     ^^^^^^^^^^^ Invalid 'use'. Unbound module: '0x0::Module'

error[E03002]: unbound module
  ┌─ tests/move_check/parser/use_with_main.move:4:5
  │
4 │ use 0xaBcD::Module as M;
  │     ^^^^^^^^^^^^^^ Invalid 'use'. Unbound module: '0xABCD::Module'

error[E03002]: unbound module
  ┌─ tests/move_check/parser/use_with_main.move:5:5
  │
5 │ use 0x0000::Z;
  │     ^^^^^^^^^ Invalid 'use'. Unbound module: '0x0::Z'

